results timeseries, latest code

--- a/OutbreakMethods.ipynb
+++ b/OutbreakMethods.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 1,
    "metadata": {
     "collapsed": true
    },
@@ -31,7 +31,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 2,
    "metadata": {
     "collapsed": true
    },
@@ -54,7 +54,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 3,
    "metadata": {
     "collapsed": true
    },
@@ -86,7 +86,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 4,
    "metadata": {
     "collapsed": true
    },
@@ -110,7 +110,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 5,
    "metadata": {
     "collapsed": true
    },
@@ -140,7 +140,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 6,
    "metadata": {
     "collapsed": true
    },
@@ -164,7 +164,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 7,
    "metadata": {
     "collapsed": true
    },
@@ -204,7 +204,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 8,
    "metadata": {
     "collapsed": true
    },
@@ -216,7 +216,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 9,
    "metadata": {
     "collapsed": true
    },
@@ -224,13 +224,13 @@
    "source": [
     "colors = {'AR':'#658E9C', 'GT':'#8CBA80', 'ARGO':'#CD5555'}\n",
     "models = ['AR', 'GT', 'ARGO']\n",
-    "countries = ['angola', 'colombia', 'drc', 'madagascar']\n",
-    "titles = ['Yellow Fever in Angola', 'Zika in Colombia', 'Ebola in the DRC', 'Pneumonic Plague in Madagascar']"
+    "countries = ['angola', 'colombia', 'drc', 'madagascar', 'yemen']\n",
+    "titles = ['Yellow Fever in Angola', 'Zika in Colombia', 'Ebola in the DRC', 'Pneumonic Plague in Madagascar', 'Cholera in Yemen']"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 48,
+   "execution_count": 61,
    "metadata": {
     "collapsed": true
    },
@@ -252,6 +252,11 @@
     "        results[model]['corr'] = np.corrcoef(list(reports['groundtruth'].values)[-len(yhats):], yhats)[0][1]\n",
     "        results[model]['rmse'] = rmse(list(reports['groundtruth'].values)[-len(yhats):], yhats)\n",
     "        results[model]['yhats'] = yhats\n",
+    "        results_series = reports[['groundtruth']]\n",
+    "        results_series = results_series.merge(pd.DataFrame(results[model], index=results[model]['dates'])[['yhats']],\n",
+    "                                            how='outer', left_index=True, right_index=True)\n",
+    "        results_series = results_series.rename({'yhats':model}, axis='columns')\n",
+    "        results_series.to_csv('results/' + country + '_' + str(th) + '.csv', index=False)\n",
     "    # Plot of predictions\n",
     "    if line_plot_ax is not None:\n",
     "        line_plot_ax.fill_between(reports.index, 0, reports['groundtruth'], color='lightgrey', label='Ground truth')\n",
@@ -281,7 +286,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 63,
    "metadata": {},
    "outputs": [
     {
@@ -291,7 +296,8 @@
       "angola\n",
       "colombia\n",
       "drc\n",
-      "madagascar\n"
+      "madagascar\n",
+      "yemen\n"
      ]
     }
    ],
@@ -303,31 +309,33 @@
     "evaluations = {country:{} for country in countries}\n",
     "for c, country in enumerate(countries):\n",
     "    print(country)\n",
-    "    df_corr = pd.DataFrame(index=models, columns=ths)\n",
-    "    df_rmse = pd.DataFrame(index=models, columns=ths)\n",
-    "    #fig, ax = plt.subplots(2, figsize=(20, 9))\n",
-    "    for th in [2, 1]:\n",
-    "        #a = ax[0] if th == 1 else ax[1]\n",
-    "        fig, a = plt.subplots(1, figsize=(20, 5))\n",
-    "        weekly = False if country == 'madagascar' else True\n",
-    "        results = run_all_theoretical(country, a, None, th, weekly)\n",
-    "        df_corr[th] = [results[model]['corr'] for model in models]\n",
-    "        df_rmse[th] = [results[model]['rmse'] for model in models]\n",
-    "        a.set_ylabel('Cases')\n",
-    "        #a.set_title('Assuming Reporting Delay of ' + str(th) + ' Weeks')\n",
-    "        a.set_title('Digital Epidemiological Modeling of ' + titles[c], fontsize='x-large')\n",
-    "        plt.tight_layout()\n",
-    "        #plt.subplots_adjust(top=0.88)\n",
-    "        #plt.suptitle('Digital Epidemiological Modeling of ' + titles[c], fontsize='x-large')\n",
-    "        plt.savefig('newnewfigures/theoretical/' + country + '_' + str(th) + '.png')\n",
-    "    #plt.savefig('newnewfigures/theoretical/' + country + '_both' + '.png')\n",
-    "    evaluations[country]['corr'] = df_corr\n",
-    "    evaluations[country]['rmse'] = df_rmse"
+    "    if True:\n",
+    "        df_corr = pd.DataFrame(index=models, columns=ths)\n",
+    "        df_rmse = pd.DataFrame(index=models, columns=ths)\n",
+    "        #fig, ax = plt.subplots(2, figsize=(20, 9))\n",
+    "        for th in [2, 1]:\n",
+    "            #a = ax[0] if th == 1 else ax[1]\n",
+    "            fig, a = plt.subplots(1, figsize=(20, 5))\n",
+    "            weekly = False if country == 'madagascar' else True\n",
+    "            results = run_all_theoretical(country, a, None, th, weekly)\n",
+    "            df_corr[th] = [results[model]['corr'] for model in models]\n",
+    "            df_rmse[th] = [results[model]['rmse'] for model in models]\n",
+    "            a.set_ylabel('Cases')\n",
+    "            #a.set_title('Assuming Reporting Delay of ' + str(th) + ' Weeks')\n",
+    "            a.set_title('Digital Epidemiological Modeling of ' + titles[c], fontsize='x-large')\n",
+    "            a.legend(loc='best')\n",
+    "            plt.tight_layout()\n",
+    "            #plt.subplots_adjust(top=0.88)\n",
+    "            #plt.suptitle('Digital Epidemiological Modeling of ' + titles[c], fontsize='x-large')\n",
+    "            plt.savefig(country + '_' + str(th) + '.png')\n",
+    "        #plt.savefig('newnewfigures/theoretical/' + country + '_both' + '.png')\n",
+    "        evaluations[country]['corr'] = df_corr\n",
+    "        evaluations[country]['rmse'] = df_rmse"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 49,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [
     {
@@ -337,7 +345,8 @@
       "angola\n",
       "colombia\n",
       "drc\n",
-      "madagascar\n"
+      "madagascar\n",
+      "yemen\n"
      ]
     }
    ],
@@ -347,7 +356,7 @@
     "'''\n",
     "ths = [2, 1]\n",
     "evaluations = {country:{} for country in countries}\n",
-    "fig, ax = plt.subplots(4, 2, figsize=(20, 9), sharex=False, sharey=False)\n",
+    "fig, ax = plt.subplots(5, 2, figsize=(20, 12), sharex=False, sharey=False)\n",
     "for c, country in enumerate(countries):\n",
     "    print(country)\n",
     "    df_corr = pd.DataFrame(index=models, columns=ths)\n",
@@ -369,30 +378,92 @@
     "ax[1, 0].set_ylabel('New Cases (Weekly)', size='small')\n",
     "ax[2, 0].set_ylabel('New Cases (Weekly)', size='small')\n",
     "ax[3, 0].set_ylabel('New Cases (Daily)', size='small')\n",
-    "for i in range(4):\n",
+    "ax[4, 0].set_ylabel('New Cases (Weekly)', size='small')\n",
+    "for i in range(5):\n",
     "    ax[i, 1].get_yaxis().set_visible(False)\n",
     "plt.tight_layout(h_pad=2, rect=[0, 0, 1, 0.97])\n",
-    "plt.figtext(0.5, 0.95, 'Yellow Fever in Angola', ha='center', va='center', size='medium')\n",
-    "plt.figtext(0.5, 0.705, 'Zika in Colombia', ha='center', va='center', size='medium')\n",
-    "plt.figtext(0.5, 0.47, 'Ebola in the DRC', ha='center', va='center', size='medium')\n",
-    "plt.figtext(0.5, 0.23, 'Plague in Madagascar', ha='center', va='center', size='medium')\n",
+    "plt.figtext(0.5, 0.962, 'Yellow Fever in Angola', ha='center', va='center', size='medium')\n",
+    "plt.figtext(0.5, 0.77, 'Zika in Colombia', ha='center', va='center', size='medium')\n",
+    "plt.figtext(0.5, 0.572, 'Ebola in the DRC', ha='center', va='center', size='medium')\n",
+    "plt.figtext(0.5, 0.38, 'Plague in Madagascar', ha='center', va='center', size='medium')\n",
+    "plt.figtext(0.5, 0.19, 'Cholera in Yemen', ha='center', va='center', size='medium')\n",
     "plt.figtext(0.25, 0.98, 'Assuming reporting delay of 1 week', ha='center', va='center', size='large')\n",
     "plt.figtext(0.75, 0.98, 'Assuming reporting delay of 2 weeks', ha='center', va='center', size='large')\n",
-    "plt.figtext(0.01, 0.99, 'a', ha='center', va='center', size='large', weight='bold')\n",
+    "#plt.figtext(0.01, 0.99, 'a', ha='center', va='center', size='large', weight='bold')\n",
     "plt.savefig('results1_part1.png')"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 53,
-   "metadata": {
-    "collapsed": true
-   },
-   "outputs": [],
+   "execution_count": 35,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "{'angola': {'corr':              2         1\n",
+       "  AR    0.537874  0.878984\n",
+       "  GT    0.796699  0.789052\n",
+       "  ARGO  0.688780  0.881781, 'rmse':               2          1\n",
+       "  AR    62.650579  17.597337\n",
+       "  GT    17.633600  17.658728\n",
+       "  ARGO  20.420224  13.217858}, 'colombia': {'corr':              2         1\n",
+       "  AR    0.778537  0.920216\n",
+       "  GT    0.727812  0.780606\n",
+       "  ARGO  0.819780  0.929856, 'rmse':                 2           1\n",
+       "  AR    1176.744826  644.237268\n",
+       "  GT    1072.013798  997.450605\n",
+       "  ARGO   823.338520  542.392854}, 'drc': {'corr':              2         1\n",
+       "  AR    0.190784  0.573803\n",
+       "  GT    0.497807  0.581774\n",
+       "  ARGO  0.170057  0.580719, 'rmse':               2          1\n",
+       "  AR    28.108858  15.252126\n",
+       "  GT    18.130043  16.980575\n",
+       "  ARGO  27.413349  15.246174}, 'madagascar': {'corr':              2         1\n",
+       "  AR    0.876100  0.912609\n",
+       "  GT    0.675649  0.740227\n",
+       "  ARGO  0.842592  0.922090, 'rmse':               2          1\n",
+       "  AR    11.648131   8.451411\n",
+       "  GT    15.379634  13.605132\n",
+       "  ARGO  11.850719   7.966380}, 'yemen': {'corr':              2         1\n",
+       "  AR    0.931306  0.984577\n",
+       "  GT    0.585842  0.653590\n",
+       "  ARGO  0.942728  0.985786, 'rmse':                  2             1\n",
+       "  AR     9156.567026   4224.877355\n",
+       "  GT    19486.672277  18532.219816\n",
+       "  ARGO   8497.430266   3973.057336}}"
+      ]
+     },
+     "execution_count": 35,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# Print evaluation metrics for latex table in paper\n",
+    "evaluations"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 13,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "\"\\nSummary heatmaps of model performances across models, outbreaks, and time horizons\\n\\nfig, ax = plt.subplots(2, 4, figsize=(20, 5))\\nfor c, country in enumerate(countries):\\n    sns.heatmap(evaluations[country]['corr'].T, ax=ax[0, c], cmap='Blues')\\n    sns.heatmap(evaluations[country]['rmse'].T, ax=ax[1, c], cmap='Greens_r')\\n    ax[0, c].set_title(titles[c] + ' - corr', size='medium')\\n    ax[1, c].set_title(titles[c] + ' - RMSE', size='medium')\\nax[0, 0].set_ylabel('Delay (Weeks)')\\nax[1, 0].set_ylabel('Delay (Weeks)')\\nplt.tight_layout()\\nplt.subplots_adjust(top=0.83)\\nplt.suptitle('Performance of Models Across Outbreaks and Reporting Delays', fontsize='large')\\nplt.figtext(0.01, 0.96, 'b', ha='center', va='center', size='large', weight='bold')\\nplt.savefig('results1_part2.png')\\n\""
+      ]
+     },
+     "execution_count": 13,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "'''\n",
     "Summary heatmaps of model performances across models, outbreaks, and time horizons\n",
-    "'''\n",
+    "\n",
     "fig, ax = plt.subplots(2, 4, figsize=(20, 5))\n",
     "for c, country in enumerate(countries):\n",
     "    sns.heatmap(evaluations[country]['corr'].T, ax=ax[0, c], cmap='Blues')\n",
@@ -405,7 +476,8 @@
     "plt.subplots_adjust(top=0.83)\n",
     "plt.suptitle('Performance of Models Across Outbreaks and Reporting Delays', fontsize='large')\n",
     "plt.figtext(0.01, 0.96, 'b', ha='center', va='center', size='large', weight='bold')\n",
-    "plt.savefig('results1_part2.png')"
+    "plt.savefig('results1_part2.png')\n",
+    "'''"
    ]
   },
   {
@@ -458,7 +530,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 14,
    "metadata": {
     "collapsed": true
    },
@@ -469,7 +541,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 94,
+   "execution_count": 37,
    "metadata": {
     "collapsed": true
    },
@@ -530,7 +602,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 95,
+   "execution_count": 64,
    "metadata": {},
    "outputs": [
     {
@@ -540,45 +612,68 @@
       "angola\n",
       "colombia\n",
       "drc\n",
-      "madagascar\n"
+      "madagascar\n",
+      "yemen\n"
      ]
     }
    ],
    "source": [
     "# Figure 3 in paper\n",
-    "fig, ax = plt.subplots(6, 2, figsize=(20, 13))\n",
+    "fig, ax = plt.subplots(9, 2, figsize=(20, 18))\n",
     "print('angola')\n",
     "run_all_practical('angola', ax[:3, 0], ['5/8/16', '5/23/16', '6/6/16'])\n",
     "print('colombia')\n",
     "run_all_practical('colombia', ax[:3, 1], ['2/24/16', '4/14/16', '5/19/16'])\n",
     "print('drc')\n",
-    "run_all_practical('drc', ax[3:, 0], ['9/7/18', '11/29/18', '12/28/18'])\n",
+    "run_all_practical('drc', ax[3:6, 0], ['9/7/18', '11/29/18', '12/28/18'])\n",
     "print('madagascar')\n",
-    "run_all_practical('madagascar', ax[3:, 1], ['10/5/17', '10/16/17', '11/9/17'])\n",
+    "run_all_practical('madagascar', ax[3:6, 1], ['10/5/17', '10/16/17', '11/9/17'])\n",
+    "print('yemen')\n",
+    "run_all_practical('yemen', ax[6:, 0], ['9/3/17', '10/1/17', '11/5/17'])\n",
     "ax[0, 1].legend(loc='upper right', prop={'size':10})\n",
-    "for a in [ax[0, 0], ax[1, 0], ax[3, 0], ax[4, 0], ax[0, 1], ax[1, 1], ax[3, 1], ax[4, 1]]:\n",
+    "for a in [ax[0, 0], ax[1, 0], ax[3, 0], ax[4, 0], ax[0, 1], ax[1, 1], ax[3, 1], ax[4, 1], ax[6, 0], ax[7, 0]]:\n",
     "    a.get_xaxis().set_visible(False)\n",
     "plt.tight_layout(rect=[0, 0.04, 1, 0.98])\n",
-    "for a in [ax[3, 0], ax[4, 0], ax[5, 0], ax[3, 1], ax[4, 1], ax[5, 1]]:\n",
+    "for a in [ax[3, 0], ax[4, 0], ax[5, 0], ax[3, 1], ax[4, 1], ax[5, 1], ax[6, 0], ax[7, 0], ax[8, 0]]:\n",
     "    pos1 = a.get_position() \n",
-    "    pos2 = [pos1.x0, pos1.y0-0.04,  pos1.width, pos1.height] \n",
+    "    pos2 = [pos1.x0, pos1.y0-0.02,  pos1.width, pos1.height] \n",
     "    a.set_position(pos2) \n",
-    "plt.figtext(0.26, 0.98, 'Yellow Fever in Angola', ha='center', va='center', size='large')\n",
-    "plt.figtext(0.755, 0.98, 'Zika in Colombia', ha='center', va='center', size='large')\n",
-    "plt.figtext(0.26, 0.48, 'Ebola in the DRC', ha='center', va='center', size='large')\n",
-    "plt.figtext(0.755, 0.48, 'Plague in Madagascar', ha='center', va='center', size='large')\n",
+    "for a in [ax[6, 0], ax[7, 0], ax[8, 0]]:\n",
+    "    pos1 = a.get_position() \n",
+    "    pos2 = [pos1.x0, pos1.y0-0.02,  pos1.width, pos1.height] \n",
+    "    a.set_position(pos2) \n",
+    "for a in [ax[6, 1], ax[7, 1], ax[8, 1]]:\n",
+    "    fig.delaxes(a)\n",
+    "plt.figtext(0.27, 0.973, 'Yellow Fever in Angola', ha='center', va='center', size='large')\n",
+    "plt.figtext(0.76, 0.973, 'Zika in Colombia', ha='center', va='center', size='large')\n",
+    "plt.figtext(0.27, 0.645, 'Ebola in the DRC', ha='center', va='center', size='large')\n",
+    "plt.figtext(0.76, 0.645, 'Plague in Madagascar', ha='center', va='center', size='large')\n",
+    "plt.figtext(0.27, 0.32, 'Cholera in Yemen', ha='center', va='center', size='large')\n",
     "plt.savefig('results3.png')"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 61,
+   "execution_count": null,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 41,
    "metadata": {
     "collapsed": true
    },
    "outputs": [],
    "source": [
-    "run_all_practical('angola', (20, 20), 0.92)"
+    "fig, ax = plt.subplots(12, figsize=(20, 30))\n",
+    "run_all_practical('yemen', ax, [x for x in pd.read_csv('data/yemen/yemenreports.csv').columns if '/' in x])\n",
+    "ax[0].legend(loc='best')\n",
+    "plt.tight_layout()\n",
+    "plt.savefig('yemenreports.png')"
    ]
   },
   {
@@ -700,7 +795,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 63,
+   "execution_count": 21,
    "metadata": {
     "collapsed": true
    },
@@ -732,27 +827,39 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 64,
+   "execution_count": 30,
    "metadata": {
     "collapsed": true
    },
    "outputs": [],
    "source": [
+    "fig, ax = plt.subplots(1, figsize=(20, 5))\n",
+    "eda(ax, 'data/yemen/yemenreports.csv', 'data/yemen/yemenpredictors.csv', 'cholera', ('Cases of Cholera in Yemen (scaled to range [0, 1])', \"Searches for 'cholera' in Yemen (scaled to range [0, 1])\"), 'Cholera in Yemen', 'blue')\n",
+    "plt.tight_layout()\n",
+    "plt.savefig('yemeneda.png')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 34,
+   "metadata": {},
+   "outputs": [],
+   "source": [
     "# EDA\n",
     "plt.rcParams['font.size'] = 17\n",
-    "colors = ['orange', 'mediumseagreen', 'royalblue', 'salmon']\n",
-    "fig, ax = plt.subplots(2, 2, figsize=(20, 8))\n",
+    "colors = ['orange', 'mediumseagreen', 'royalblue', 'salmon', 'purple']\n",
+    "fig, ax = plt.subplots(3, 2, figsize=(20, 12))\n",
     "ax = ax.flatten()\n",
     "eda(ax[0], 'data/angola/angolareports.csv', 'data/angola/angolapredictors.csv', 'yellow fever', ('Confirmed cases of yellow fever in Angola (scaled to range [0, 1])', \"Searches for 'yellow fever' in Angola (scaled to range [0, 1])\"), 'Yellow Fever in Angola', colors[0])\n",
     "eda(ax[1], 'data/colombia/colombiareports.csv', 'data/colombia/colombiapredictors.csv', 'zika', ('Suspected cases of Zika in Colombia (scaled to range [0, 1])', \"Searches for 'zika' in Colombia (scaled to range [0, 1])\"), \n",
     "    'Zika in Colombia', colors[1])\n",
     "eda(ax[2], 'data/drc/drcreports.csv', 'data/drc/drcpredictors.csv', 'ebola', ('Suspected cases of Ebola in the DRC (scaled to range [0, 1])', \"Searches for 'ebola' in the DRC (scaled to range [0, 1])\"), 'Ebola in the DRC', colors[2])\n",
     "eda(ax[3], 'data/madagascar/madagascarreports.csv', 'data/madagascar/madagascarpredictors.csv', 'peste', ('Confirmed cases of Plague in Madagascar (scaled to range [0, 1])', \"Searches for 'peste' in Madagascar (scaled to range [0, 1])\"), 'Plague in Madagascar', colors[3])\n",
+    "eda(ax[4], 'data/yemen/yemenreports.csv', 'data/yemen/yemenpredictors.csv', 'cholera', ('Suspected cases of Cholera in Yemen (scaled to range [0, 1])', \"Searches for 'cholera' in Yemen (scaled to range [0, 1])\"), 'Cholera in Yemen', colors[4])\n",
     "ax[0].set_ylabel('Cases')\n",
     "plt.tight_layout()\n",
-    "#plt.subplots_adjust(top=0.9)\n",
-    "#plt.suptitle('Motivation for Digital Epidemiological Methods', fontsize='x-large')\n",
-    "plt.savefig('newnewfigures/eda_2.png')"
+    "fig.delaxes(ax[5])\n",
+    "plt.savefig('eda_2.png')"
    ]
   },
   {
